@@ -67,9 +67,9 @@
           <zip destfile="${src}/RemoteMaster.${rmversion}.zip">
           	<zipfileset dir="${src}" includes="RemoteMaster.jar" filemode="755" />
           	<zipfileset dir="${src}" includes="buildRef.txt,RMIR.sys,Readme.html,RMPB_Readme.html,*.css" />
-            <zipfileset dir="${src}" includes="protocols.ini,ChangeLog.txt,digitmaps.bin,Setup.vbs,porttalk.sys,*.ico, Docs/*.pdf" />
-            <zipfileset src="${src}/jp1parallel_011.zip" includes="**/*.dll"/>
-			<zipfileset src="${src}/jp1parallel_011.zip" includes="libjp1parallel.so" prefix="Linux-i386" filemode="755"/>
+            <zipfileset dir="${src}" includes="protocols.ini,ChangeLog.txt,digitmaps.bin,Setup.vbs,*.ico, Docs/*.pdf" />
+            <zipfileset src="${src}/jp1parallel_012.zip" includes="**/*.dll"/>
+			<zipfileset src="${src}/jp1parallel_012.zip" includes="libjp1parallel.so" prefix="Linux-i386" filemode="755"/>
 			<zipfileset src="${src}/par64.zip" includes="libjp1parallel.so" prefix="Linux-amd64" filemode="755"/>
             <zipfileset src="${src}/jp12serial022.zip" includes="**/*.dll"/>
 			<zipfileset src="${src}/jp12serial022.zip" includes="**/*.so,**/*.jnilib" filemode="755"/>
