@@ -2224,7 +2224,14 @@ public class RemoteConfiguration
           // no need to re-encrypt protocols when reconstructing type 0x10 segments for these
           // remotes, but re-encryption remains necessary for XSight remotes, i.e those that
           // use EZ-RC.
-          if ( remote.usesEZRC() || ( protocolCode.getData()[ 3 ] & 0x40 ) > 0 )
+          if ( protocolCode.length() < 4 )
+          {
+            // This is a protection against a situation that has been seen generated by missing
+            // commas in the [Protocols] section.  No valid protocol has a length < 4.  This case
+            // should not arise, other than through such errors.
+            protocolCode = null;
+          }
+          else if ( remote.usesEZRC() || ( protocolCode.getData()[ 3 ] & 0x40 ) > 0 )
           {
             decryptObjcode( protocolCode );
           }
